--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
            <h5 class="text-muted"> ENGLISH TEST </h5>
            <p  class="text-dark" style="text-align: justify;"> 
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam maiores perspiciatis iure assumenda aliquam repudiandae sequi illum fuga, minus itaque culpa placeat dolores, corporis blanditiis. Commodi rerum fugit vel quaerat. </p>
-           <button class="button btn-primary">Registrate </button>
+           <button class="button btn-primary">ENGLISH TEST </button>
       </div>
       <div class="col-sm-3 col-md-3 "  style="margin: 25px;">
         <img src="img/CLIK_PROF_LOGO.png" alt="Logo picture" class=" rounded img-fluid">
