checkmark issue/bug fixed

--- a/EnglishLevelTest_p1.html
+++ b/EnglishLevelTest_p1.html
@@ -49,15 +49,15 @@
             <br>
                 <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
                     <label class="options">finally
-                        <input type="radio" name="exampleForm" id="radioExample2_1" />
+                        <input type="radio" name="exampleForm2" id="radioExample2_1" />
                         <span class="checkmark"></span>
                         </label>
                     <label class="options">at last
-                        <input type="radio" name="exampleForm" id="radioExample2_2" />
+                        <input type="radio" name="exampleForm2" id="radioExample2_2" />
                         <span class="checkmark"></span>
                     </label>
                     <label class="options">in the end
-                        <input type="radio" name="exampleForm" id="radioExample2_3" />
+                        <input type="radio" name="exampleForm2" id="radioExample2_3" />
                         <span class="checkmark"></span>
                     </label>
                 </div>
@@ -73,15 +73,15 @@
             <br>
                 <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
                     <label class="options">can
-                        <input type="radio" name="exampleForm" id="radioExample3_1" />
+                        <input type="radio" name="exampleForm3" id="radioExample3_1" />
                         <span class="checkmark"></span>
                         </label>
                     <label class="options">shoud
-                        <input type="radio" name="exampleForm" id="radioExample3_2" />
+                        <input type="radio" name="exampleForm3" id="radioExample3_2" />
                         <span class="checkmark"></span>
                     </label>
                     <label class="options">will
-                        <input type="radio" name="exampleForm" id="radioExample3_3" />
+                        <input type="radio" name="exampleForm3" id="radioExample3_3" />
                         <span class="checkmark"></span>
                     </label>
                 </div>
@@ -102,15 +102,15 @@
             <br>
                 <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
                     <label class="options">disagree
-                        <input type="radio" name="exampleForm" id="radioExample3_1" />
+                        <input type="radio" name="exampleForm4" id="radioExample4_1" />
                         <span class="checkmark"></span>
                         </label>
                     <label class="options">complain
-                        <input type="radio" name="exampleForm" id="radioExample3_2" />
+                        <input type="radio" name="exampleForm4" id="radioExample4_2" />
                         <span class="checkmark"></span>
                     </label>
                     <label class="options">argue
-                        <input type="radio" name="exampleForm" id="radioExample3_3" />
+                        <input type="radio" name="exampleForm4" id="radioExample4_3" />
                         <span class="checkmark"></span>
                     </label>
                 </div>
@@ -128,15 +128,15 @@
             <br>
                 <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
                     <label class="options">Mind you
-                        <input type="radio" name="exampleForm" id="radioExample3_1" />
+                        <input type="radio" name="exampleForm5" id="radioExample5_1" />
                         <span class="checkmark"></span>
                         </label>
                     <label class="options">By the way
-                        <input type="radio" name="exampleForm" id="radioExample3_2" />
+                        <input type="radio" name="exampleForm5" id="radioExample5_2" />
                         <span class="checkmark"></span>
                     </label>
                     <label class="options">Still
-                        <input type="radio" name="exampleForm" id="radioExample3_3" />
+                        <input type="radio" name="exampleForm5" id="radioExample5_3" />
                         <span class="checkmark"></span>
                     </label>
                 </div>
