Result page is created and buttons link pages

--- a/EnglishLevelTest_p2.html
+++ b/EnglishLevelTest_p2.html
@@ -19,21 +19,25 @@
     <div class="container-fluid">
         <div class="container-question">
             <div class="question ml-sm-5 pl-sm-5 pt-2">
-                <div class= "h6"><b>The baby boy saw ___ in the mirror and started to cry.</b></div>
+                <div class= "h6"><b>Have you got time to discuss your work now or are you ___ to leave?</b></div>
             </div>
         </div>
             <br>
                 <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
-                    <label class="options">itself
-                        <input type="radio" name="exampleForm" id="radioExample1_1" />
+                    <label class="options">thinking
+                        <input type="radio" name="exampleForm" id="radioExample2_1_1" />
                         <span class="checkmark"></span>
                         </label>
-                    <label class="options">himself
-                        <input type="radio" name="exampleForm" id="radioExample1_2" />
+                    <label class="options">round
+                        <input type="radio" name="exampleForm" id="radioExample2_1_2" />
                         <span class="checkmark"></span>
                     </label>
-                    <label class="options">herself
-                        <input type="radio" name="exampleForm" id="radioExample1_3" />
+                    <label class="options">planned
+                        <input type="radio" name="exampleForm" id="radioExample2_1_3" />
+                        <span class="checkmark"></span>
+                    </label>
+                    <label class="options">about
+                        <input type="radio" name="exampleForm" id="radioExample2_1_4" />
                         <span class="checkmark"></span>
                     </label>
                 </div>
@@ -43,21 +47,25 @@
     <div class="container-fluid">
         <div class="container-question">
             <div class="question ml-sm-5 pl-sm-5 pt-2">
-                <div class= "h6"><b>Firstly, I want to congratulate you all. Secondly, I would like to wish you good luck and ___ I hope you have enjoyed the course.</b></div>
+                <div class= "h6"><b>When I realised I had dropped my gloves, I decided to ___ my steps.</b></div>
             </div>
         </div>
             <br>
                 <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
-                    <label class="options">finally
-                        <input type="radio" name="exampleForm2" id="radioExample2_1" />
+                    <label class="options">resume
+                        <input type="radio" name="exampleForm2" id="radioExample2_2_1" />
                         <span class="checkmark"></span>
                         </label>
-                    <label class="options">at last
-                        <input type="radio" name="exampleForm2" id="radioExample2_2" />
+                    <label class="options">regress
+                        <input type="radio" name="exampleForm2" id="radioExample2_2_2" />
                         <span class="checkmark"></span>
                     </label>
-                    <label class="options">in the end
-                        <input type="radio" name="exampleForm2" id="radioExample2_3" />
+                    <label class="options">retrace
+                        <input type="radio" name="exampleForm2" id="radioExample2_2_3" />
+                        <span class="checkmark"></span>
+                    </label>
+                    <label class="options">return
+                        <input type="radio" name="exampleForm2" id="radioExample2_2_4" />
                         <span class="checkmark"></span>
                     </label>
                 </div>
@@ -67,21 +75,21 @@
     <div class="container-fluid">
         <div class="container-question">
             <div class="question ml-sm-5 pl-sm-5 pt-2">
-                <div class= "h6"><b>You ___ clean your teeth twice a day to avoid having problems.</b></div>
+                <div class= "h6"><b>I'd like two tickets for tomorrow night.</b></div>
             </div>
         </div>
             <br>
                 <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
-                    <label class="options">can
-                        <input type="radio" name="exampleForm3" id="radioExample3_1" />
+                    <label class="options">How much did you pay?
+                        <input type="radio" name="exampleForm3" id="radioExample2_3_1" />
                         <span class="checkmark"></span>
                         </label>
-                    <label class="options">shoud
-                        <input type="radio" name="exampleForm3" id="radioExample3_2" />
+                    <label class="options">Afternoon and evening.
+                        <input type="radio" name="exampleForm3" id="radioExample2_3_2" />
                         <span class="checkmark"></span>
                     </label>
-                    <label class="options">will
-                        <input type="radio" name="exampleForm3" id="radioExample3_3" />
+                    <label class="options">I'll just check for you
+                        <input type="radio" name="exampleForm3" id="radioExample2_3_3" />
                         <span class="checkmark"></span>
                     </label>
                 </div>
@@ -89,53 +97,52 @@
             </div>
 <br>
 <br>
-    <p class="pIntro">Choose the best word (or phrase) to complete the dialogue.</p>
+    <p class="pIntro">Some words are often used together, e.g. smelly + socks. Choose a word which is often used with:</p>
 <br>
     <div class="container-fluid">
         <div class="container-question">
             <div class="question ml-sm-5 pl-sm-5 pt-2">
-                <div class= "h6"><b>Jack: I think it’s going to rain.<br>
-                    Jill: I ___ , the clouds are clearing.<br>
-                    Jack: We’ll soon see.</b></div>
+                <div class= "h6"><b>sophisticated ____</b></div>
             </div>
         </div>
             <br>
                 <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
-                    <label class="options">disagree
-                        <input type="radio" name="exampleForm4" id="radioExample4_1" />
+                    <label class="options">dress
+                        <input type="radio" name="exampleForm4" id="radioExample2_4_1" />
                         <span class="checkmark"></span>
                         </label>
-                    <label class="options">complain
-                        <input type="radio" name="exampleForm4" id="radioExample4_2" />
+                    <label class="options">purse
+                        <input type="radio" name="exampleForm4" id="radioExample2_4_2" />
                         <span class="checkmark"></span>
                     </label>
-                    <label class="options">argue
-                        <input type="radio" name="exampleForm4" id="radioExample4_3" />
+                    <label class="options">ship
+                        <input type="radio" name="exampleForm4" id="radioExample2_4_3" />
                         <span class="checkmark"></span>
                     </label>
                 </div>
                 </div>
             </div>
 <br>
+<br>
+    <p class="pIntro">Choose the word or phrase which has a similar meaning to:</p>
+<br>
     <div class="container-fluid">
         <div class="container-question">
             <div class="question ml-sm-5 pl-sm-5 pt-2">
-                <div class= "h6"><b>Anne: Oh! I watched the new TV show last night.<br>
-                    Jo: Was it any good?<br>
-                    Anne: Yes. ___ the TV set is so old I could see very little.</b></div>
+                <div class= "h6"><b>return</b></div>
             </div>
         </div>
             <br>
                 <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3" id="options">
-                    <label class="options">Mind you
+                    <label class="options">account
                         <input type="radio" name="exampleForm5" id="radioExample5_1" />
                         <span class="checkmark"></span>
                         </label>
-                    <label class="options">By the way
+                    <label class="options">go back
                         <input type="radio" name="exampleForm5" id="radioExample5_2" />
                         <span class="checkmark"></span>
                     </label>
-                    <label class="options">Still
+                    <label class="options">reverse
                         <input type="radio" name="exampleForm5" id="radioExample5_3" />
                         <span class="checkmark"></span>
                     </label>
@@ -144,9 +151,9 @@
             </div>
 <br>
         <div class="d-flex justify-content-around pt-3">
-            <div id="prev"><button type="button" disabled class="btn btn-primary">Previous</button></div>
-            <div class="h5 mt-3"><i>(1/2)</i></div>
-            <div id="next"><button type="button" Onclick="location.href='/EnglishApp_GH/EnglishApp-G05/EnglishLevelTest_p2.html'" class="btn btn-primary">Next</button></div>
+            <div id="prev"><button type="button" Onclick="location.href='/EnglishApp_GH/EnglishApp-G05/EnglishLevelTest_p1.html'"class="btn btn-primary">Previous</button></div>
+            <div class="h5 mt-3"><i>(2/2)</i></div>
+            <div id="subm"><button type="button" Onclick="location.href='/EnglishApp_GH/EnglishApp-G05/ResultTest.html'" class="btn btn-primary">Submit</button></div>
         </div>
         </div>
 </body>
