--- a/ResultTest.html
+++ b/ResultTest.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>English-level-test</title>
-    <link rel="stylesheet" href="/EnglishApp_GH/EnglishApp-G05/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/EnglishApp_GH/EnglishApp-G05/css/TestStyle.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/TestStyle.css">
 </head>
 
 <header>
