--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-    <title>CLICK-PROF</title>
+    <title>CLICK-PROF!</title>
   </head>
   <body>
 
