Link test pages

--- a/EnglishLevelTest_p1.html
+++ b/EnglishLevelTest_p1.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>English-level-test</title>
-    <link rel="stylesheet" href="/EnglishApp_GH/EnglishApp-G05/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/EnglishApp_GH/EnglishApp-G05/css/TestStyle.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/TestStyle.css">
 </head>
 
 <header>
@@ -146,7 +146,7 @@
         <div class="d-flex justify-content-around pt-3">
             <div id="prev"><button type="button" disabled class="btn btn-primary">Previous</button></div>
             <div class="h5 mt-3"><i>(1/2)</i></div>
-            <div id="next"><button type="button" Onclick="location.href='/EnglishApp_GH/EnglishApp-G05/EnglishLevelTest_p2.html'" class="btn btn-primary">Next</button></div>
+            <div id="next"><button type="button" Onclick="location.href='EnglishLevelTest_p2.html'" class="btn btn-primary">Next</button></div>
         </div>
         </div>
 </body>
