--- a/EnglishLevelTest_p2.html
+++ b/EnglishLevelTest_p2.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>English-level-test</title>
-    <link rel="stylesheet" href="/EnglishApp_GH/EnglishApp-G05/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/EnglishApp_GH/EnglishApp-G05/css/TestStyle.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/TestStyle.css">
 </head>
 
 <header>
@@ -151,9 +151,9 @@
             </div>
 <br>
         <div class="d-flex justify-content-around pt-3">
-            <div id="prev"><button type="button" Onclick="location.href='/EnglishApp_GH/EnglishApp-G05/EnglishLevelTest_p1.html'"class="btn btn-primary">Previous</button></div>
+            <div id="prev"><button type="button" Onclick="location.href='EnglishLevelTest_p1.html'"class="btn btn-primary">Previous</button></div>
             <div class="h5 mt-3"><i>(2/2)</i></div>
-            <div id="subm"><button type="button" Onclick="location.href='/EnglishApp_GH/EnglishApp-G05/ResultTest.html'" class="btn btn-primary">Submit</button></div>
+            <div id="subm"><button type="button" Onclick="location.href='ResultTest.html'" class="btn btn-primary">Submit</button></div>
         </div>
         </div>
 </body>
