--- a/perfil.html
+++ b/perfil.html
@@ -99,7 +99,7 @@
                     Repositorio</a>
                     </button>
 
-                    <button id="boton" ><a id="boton">
+                    <button id="boton" ><a href="EnglishLevelTest_p1.html" id="boton">
                     Prueba</a>
                     </button>
                     </center>
