--- a/perfil.html
+++ b/perfil.html
@@ -45,7 +45,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="examenrecomendado.html">Recommended Exam</a>
               <a class="dropdown-item" href="recursos.html">Resources</a>
-              <a class="dropdown-item" href="ResultTest.html">Results</a>
+              <a class="dropdown-item" href="perfil.html">Results</a>
             </div>
           </li>
       </ul>
