--- a/examenrecomendado.html
+++ b/examenrecomendado.html
@@ -28,7 +28,7 @@
           <a class="nav-link" href="#">Sign up</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Log In</a>
+          <a class="nav-link" href="login.html">Log In</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -40,7 +40,7 @@
             <a class="dropdown-item" href="examenrecomendado.html">Recommended Exam</a>
             <a class="dropdown-item" href="recursos.html">Resources</a>
             
-            <a class="dropdown-item" href="ResultTest.html">Results</a>
+            <a class="dropdown-item" href="perfil.html">Results</a>
           </div>
         </li>
       </ul>
