--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
+    <link rel="stylesheet" href="css/index.css">
     <title>CLICK-PROF!</title>
   </head>
   <body>
@@ -46,6 +46,7 @@
         </div>
       </li>
     </ul>
+    
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -55,34 +56,7 @@
     <!-- END OF NAVBAR -->
 
 
-  <!--Carrousel-->
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="img/Image-1.jpg" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/Image-2.png" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/Image-3.png" alt="Third slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-    <!--End of Carrousel-->
+  
   
 
 
@@ -100,9 +74,9 @@
           <h5 class="text-muted"> ENGLISH TEST </h5>
           <p  class="text-dark" style="text-align: justify;"> 
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam maiores perspiciatis iure assumenda aliquam repudiandae sequi illum fuga, minus itaque culpa placeat dolores, corporis blanditiis. Commodi rerum fugit vel quaerat. </p>
-          <button class="button btn-primary" Onclick="location.href='EnglishLevelTest_p1.html'">ENGLISH TEST </button>
+          <button class="button btn-primary EnglishTest" Onclick="location.href='EnglishLevelTest_p1.html'">ENGLISH TEST </button>
     </div>
-    <div class="col-sm-3 col-md-3 "  style="margin: 25px;">
+    <div class="col-sm-3 col-md-3 foto"  style="margin: 25px;">
       <img src="img/CLIK_PROF_LOGO.png" alt="Logo picture" class=" rounded img-fluid">
     </div>
     </div>  
