--- a/recursos.html
+++ b/recursos.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Sign up</a>
+          <a class="nav-link" href="signup.html">Sign up</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="login.html">Log In</a>
