--- a/recursos.html
+++ b/recursos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Resources</title>
     <script src="/javascript/jquery-3.6.0.min.js" type="text/javascript"></script>   
-    <script src="/javascript/javascript.js"></script>
+    <script src="/javascript/recursos.js"></script>
     <style>
         .heading-container{
             margin-top: 50px;
